--- a/src/components/PasarelaCobros/Side/Side.scss
+++ b/src/components/PasarelaCobros/Side/Side.scss
@@ -15,7 +15,7 @@
   width: 4.5rem;
   height: 4000px;
   position: absolute;
-  z-index: -99;
+  z-index: 2;
   inset: 0 auto auto 0;
   background-color: #f4f5f7;
 }
@@ -24,21 +24,37 @@
     width: 100%;
     height: 100%;
     inset: 0 -69% 0 auto;
+    min-height: 100vh;
   }
 }
+.side {
+  &-body,
+  .title {
+    position: relative;
+    z-index: 3;
+  }
+  .button {
+    &.payment-generated,
+    &.generate-payment {
+      svg,
+      .tooltip {
+        display: none;
+      }
+    }
+  }
+}
+
 // Estilos para Side Mobile
 .is-expanded ~ * {
   .side {
     padding-right: 20px;
-    width: min(85vw, 272px);
+    width: min(80vw, 272px);
     &-body {
       .button.bigger {
         max-height: max-content;
       }
     }
     &-item {
-      padding-right: 18px !important;
-
       &.card {
         width: 100%;
       }
@@ -56,13 +72,87 @@
         font-size: 10px;
       }
     }
+    .button {
+      &.payment-generated,
+      &.generate-payment {
+        height: 48px;
+        width: 100%;
+        margin: 0;
+        svg {
+          display: none;
+        }
+        span {
+          display: block;
+        }
+
+        .tooltip {
+          display: none;
+        }
+      }
+    }
   }
 
   #background-side {
-    width: min(85vw, 272px);
+    width: min(80vw, 272px);
   }
 
   .navbar-brand .navbar-item {
     display: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .side {
+    .button {
+      &.payment-generated,
+      &.generate-payment {
+        margin-left: -0.75rem;
+        margin-top: 0.25rem;
+        padding: 0.25rem;
+        height: 48px !important;
+        width: 48px;
+
+        span {
+          display: none;
+        }
+        .tooltip {
+          display: block;
+          background-color: hsl(207deg, 61%, 53%);
+          color: #fff;
+          font-size: 12px;
+          padding: 6px 12px;
+          border-radius: 6px;
+          position: absolute;
+          right: -10px;
+          transform: translateX(100%);
+          font-weight: 400;
+          line-height: 1.3;
+
+          &::before {
+            content: ' ';
+            position: absolute;
+            top: 50%;
+            right: 100%; /* To the left of the tooltip */
+            margin-top: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: transparent hsl(207deg, 61%, 53%) transparent transparent;
+          }
+        }
+      }
+      &.generate-payment,
+      &.generate-payment-mp {
+        svg {
+          font-size: 1.75rem;
+          display: block;
+          margin-bottom: -3px;
+        }
+      }
+      &.payment-generated {
+        svg {
+          display: block;
+          font-size: 1.75rem;
+        }
+      }
+    }
   }
 }
