--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -117,9 +117,13 @@ h2.title {
     min-height: 376px;
     height: max-content;
 
-    & > *:nth-child(2) {
+    & > [class*='grid'],
+    & > [id*='grid'] {
       flex-grow: 1;
       align-content: flex-start;
+    }
+    & > .is-divider {
+      display: none;
     }
   }
 
@@ -389,25 +393,27 @@ h2.title {
 #finalResume {
   padding: 2rem;
   min-height: 300px;
-  z-index: 5;
+  z-index: 2;
   background: #fff;
   border-radius: 10px 10px 0 0;
   filter: drop-shadow(0px 30px 50px rgba(0, 0, 0, 0.25));
 
-  .datos-cliente {
-    &-header {
-      display: flex;
-      justify-content: space-between;
+  .datos {
+    &-cliente {
+      &-header {
+        display: flex;
+        justify-content: space-between;
+      }
     }
-  }
-  .datos-tarjeta {
-    .finalResume-item {
-      margin-bottom: 0.75rem;
+    &-tarjeta {
+      .finalResume-item {
+        margin-bottom: 0.75rem;
+      }
     }
-  }
-  .datos-cliente,
-  .datos-tarjeta {
-    row-gap: 1.25rem;
+    &-cliente,
+    &-tarjeta {
+      row-gap: 1.25rem;
+    }
   }
   .finalResume-confirmation {
     gap: 1rem;
@@ -440,7 +446,7 @@ h2.title {
       color: #808fa6;
       text-transform: uppercase;
       font-weight: 500;
-      font-size: 14px;
+      font-size: 12px;
 
       &.active {
         background-color: #eff1fa !important;
@@ -496,6 +502,31 @@ h2.title {
     grid-column: 2/3;
   }
 }
+.modal-generated-link {
+  padding: 1.5rem 2rem;
+  width: 500px;
+  height: 300px;
+  position: absolute;
+  top: 0;
+  left: 5rem;
+  bottom: 0;
+  z-index: 1;
+  background-color: white;
+  margin: auto 0px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  & > div.is-flex {
+    gap: 1rem;
+
+    & .is-flex {
+      flex-flow: row wrap;
+      gap: 1rem;
+    }
+  }
+}
 @media screen and (min-width: 767px) {
   .pasarela {
     overflow: unset;
@@ -541,7 +572,7 @@ h2.title {
       color: #808fa6;
       text-transform: uppercase;
       font-weight: 500;
-      font-size: 14px;
+      font-size: 12px;
     }
     form {
       order: 2;
@@ -550,55 +581,44 @@ h2.title {
       grid-template-rows: max-content auto max-content;
       padding: 0 24px 24px;
 
-      & > *:nth-child(2) {
-        overflow: scroll;
-        grid-template-columns: 1fr;
+      & > [class*='grid'],
+      & > [id*='grid'] {
+        overflow-y: scroll;
+        grid-template-columns: repeat(auto-fill, minmax(198px, 1fr));
         width: 100%;
         padding-bottom: 12px;
+
+        & > *,
+        & > [id*=''] {
+          grid-area: unset;
+        }
       }
-      .grid-med_mod_payment-mp {
-        overflow: initial;
+      & > .is-divider {
+        display: initial;
       }
-      .grid-country-item {
-        justify-content: start;
+      .grid {
+        &-country-item {
+          justify-content: start;
+          &-med_mod_payment-mp {
+            overflow: initial;
+          }
+          &-payment_method {
+            &-item {
+              &.tall {
+                height: 60px;
+              }
+              img {
+                height: 85%;
+              }
+            }
+          }
+        }
       }
       .field {
         margin: 0;
         width: 100%;
       }
-      .grid-payment_method {
-        &-item {
-          &.tall {
-            height: 60px;
-          }
-          img {
-            height: 85%;
-          }
-        }
-      }
-      .grid-med_mod_payment-mp {
-        grid-template-columns: 1fr;
-        grid-template-areas:
-          'mod'
-          'mod1'
-          'search'
-          'quotes'
-          'notification'
-          'controls';
-        gap: 12px;
 
-        .field:nth-child(3) {
-          margin-bottom: 0px;
-        }
-      }
-
-      #mod_suscrip_field {
-        grid-area: mod1;
-      }
-
-      #mod_traditional_field {
-        grid-area: mod;
-      }
       #grid-client_data,
       #grid-payment_mp {
         display: flex;
@@ -613,22 +633,24 @@ h2.title {
         flex-direction: column;
         border-radius: unset;
         filter: none;
-        .finalResume-confirmation {
-          display: flex;
-          flex-direction: column;
-          gap: 0.75rem;
-          padding-block: 1rem;
-          .field label {
-            height: max-content;
-            padding: 0.75rem;
+        .finalResume {
+          &-confirmation {
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
+            padding-block: 1rem;
+            .field label {
+              height: max-content;
+              padding: 0.75rem;
+            }
           }
-        }
-        .finalResume-item {
-          margin: 0;
-          overflow-wrap: anywhere;
+          &-item {
+            margin: 0;
+            overflow-wrap: anywhere;
 
-          h4 {
-            font-size: 1rem;
+            h4 {
+              font-size: 14px;
+            }
           }
         }
         h2 {
@@ -647,9 +669,16 @@ h2.title {
           }
         }
         #emailCliente_resume {
+          order: 2;
           flex-direction: column;
           h4 {
             margin: 0;
+            text-transform: none;
+          }
+        }
+        #todayDate_resume {
+          h4 {
+            font-size: 14px;
           }
         }
         #numeroContrato_resume h4,
@@ -657,6 +686,31 @@ h2.title {
           font-size: 18px;
         }
       }
+    }
+  }
+  .modal-generated-link {
+    padding: 0.5rem;
+    width: auto;
+    height: max-content;
+    left: 5.25rem;
+    right: 0.75rem;
+    border-radius: 8px;
+    & > div.is-flex {
+      width: 100%;
+      gap: 0.5rem;
+
+      & .is-flex {
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+    }
+    .title {
+      margin-bottom: 0.5rem;
+    }
+    .button {
+      white-space: normal;
+      height: auto;
+      padding-inline: 0.25rem;
     }
   }
 
@@ -669,7 +723,7 @@ h2.title {
       gap: 6px;
     }
 
-    .title {
+    & > .title {
       display: none;
     }
     &-item {
@@ -748,7 +802,7 @@ h2.title {
 
         &-1 {
           position: relative;
-          width: max-content;
+          width: 100%;
         }
 
         form::before {
