--- a/src/scss/pasarela-med-mod-payment.scss
+++ b/src/scss/pasarela-med-mod-payment.scss
@@ -34,6 +34,7 @@
   .field:nth-child(3) {
     grid-area: search;
     margin-bottom: 1.5rem;
+    grid-column: 1/-1;
   }
 
   .block.field_info {
@@ -47,7 +48,7 @@
     width: 100%;
     height: 100%;
     margin: 10px auto;
-    select{
+    select {
       width: 100%;
     }
   }
@@ -56,7 +57,7 @@
     width: 100%;
     height: 100%;
     margin: 10px auto;
-    select{
+    select {
       width: 100%;
     }
   }
@@ -73,6 +74,17 @@
       background-color: #feecf0 !important;
       border-color: hsl(348deg, 86%, 61%);
       color: hsl(348deg, 86%, 61%);
+    }
+  }
+}
+@media screen and (max-width: 766px) {
+  .grid-med_mod_payment,
+  .grid-med_mod_payment-mp {
+    grid-template-areas: none;
+    gap: 1rem;
+
+    .field:nth-child(3) {
+      grid-area: unset;
     }
   }
 }
