--- a/src/scss/react-paginate.scss
+++ b/src/scss/react-paginate.scss
@@ -3,16 +3,25 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  gap: 0.5rem;
+
+  a {
+    color: unset;
+  }
 }
 
-.pagination-item {
-  padding: 0.5rem 1rem;
+.pagination-item,
+.break-me {
   border: 1px solid #ddd;
   border-radius: 5px;
-  margin: 0 0.5rem;
   text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 2.5rem;
+  height: 2.5rem;
   a {
-    color: hsl(209deg, 100%, 22%);
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -21,13 +30,62 @@
 }
 
 .pagination-item.is-current {
-  background-color: hsl(340deg, 100%, 57%);
-  a {
-    color: #fff;
+  background-color: hsl(340, 100%, 57%);
+  color: #fff;
+}
+
+.pagination-item.break-me {
+  background-color: hsl(340, 100%, 57%);
+  color: #fff;
+  border-radius: 5px;
+}
+
+.pagination-item.break-me:hover {
+  background-color: hsl(340, 100%, 57%);
+}
+
+@media (max-width: 768px) {
+  .pagination-container {
+    flex-wrap: wrap;
+  }
+
+  .pagination-item {
+    margin: 0.5rem 0.25rem;
+    font-size: 0.8rem;
+  }
+
+  .pagination-item:first-child,
+  .pagination-item:last-child {
+    margin: 0.5rem 0;
+  }
+
+  .pagination-item:not(.break-me):hover {
+    background-color: transparent;
+    border-color: #ddd;
+  }
+
+  .pagination-item.is-current {
+    background-color: transparent;
+    color: hsl(340, 100%, 57%);
+  }
+
+  .pagination-item.break-me {
+    background-color: transparent;
+    color: hsl(340, 100%, 57%);
+    border: none;
+    border-bottom: 1px solid #ddd;
+    border-radius: 0;
+  }
+
+  .pagination-item.break-me:hover {
+    background-color: transparent;
+  }
+
+  li.break-me:not(:first) {
+    display: none;
   }
 }
 @media screen and (max-width: 766px) {
   .pagination-container {
-    display: none;
   }
 }
