--- a/src/components/PasarelaCobros/Side/Side.scss
+++ b/src/components/PasarelaCobros/Side/Side.scss
@@ -23,7 +23,7 @@
   #background-side {
     width: 100%;
     height: 100%;
-    inset: 0 calc(-66.69% + 1.5rem) 0 auto;
+    inset: 0 0 0 calc(66.66% + 1.5rem);
   }
 }
 // Estilos para Side Mobile
