--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -1037,6 +1037,9 @@ pre {
     .next-button {
       grid-area: next;
     }
+    button[type='submit'] {
+      grid-area: next;
+    }
     .save-button {
       width: max-content;
       padding: 0 3px;
