re-route and personalize bulma styles

--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -1,4 +1,4 @@
-@use '../../node_modules/bulma/bulma.sass';
+@use './bulma';
 @use 'abstracts' as *;
 @use './components/buttons';
 @use 'cardAsesor';
