Agregando hoc a componentes del step y modificacion de estilos para resume

--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -12,10 +12,11 @@
 @use './react-paginate.scss';
 
 // Fix bug grilla con input radio
-.radio + .radio,
-.button + .button {
+.radio+.radio,
+.button+.button {
   margin: 0;
 }
+
 :root {
   --animate-delay: 0.5s;
 }
@@ -29,21 +30,26 @@ $texto-light: #808fa6;
 .d-mobile {
   display: none;
 }
+
 .hidden {
   display: none !important;
 }
+
 @media screen and (max-width: 766px) {
   .d-desktop {
     display: none;
   }
+
   .d-mobile {
     display: unset;
   }
 }
+
 .rotate-90 {
   rotate: -90deg;
 }
-button.button > .ui.radio {
+
+button.button>.ui.radio {
   input[type='radio'] {
     visibility: hidden;
   }
@@ -53,9 +59,11 @@ body,
 input {
   font-family: 'Roboto', sans-serif !important;
 }
+
 body * {
   transition: all 0.3s ease-in;
 }
+
 header.container {
   position: absolute;
   width: 100%;
@@ -73,10 +81,12 @@ header.container {
     }
   }
 }
+
 @media screen and (min-width: 769px) {
   header {
     z-index: 10;
   }
+
   .navbar {
     background: linear-gradient(180deg, #fff, 93%, transparent);
     max-width: 70.66%;
@@ -84,18 +94,19 @@ header.container {
     margin: -1.5rem -1.5rem -2.5rem;
   }
 }
+
 .column {
   padding: 0;
   margin: 0;
 }
+
 .columns {
   margin: 0;
 }
 
 .invisible {
   display: none !important;
-  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1)
-    both;
+  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) both;
   animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) both;
   animation-play-state: paused;
 }
@@ -129,16 +140,18 @@ h2.title {
     min-height: 376px;
     height: max-content;
 
-    & > [class*='grid'] {
+    &>[class*='grid'] {
       flex-grow: 1;
       align-content: flex-start;
     }
+
     .title {
       svg {
         display: none;
       }
     }
   }
+
   &-overlay,
   .searchcourses-overlay {
     display: none;
@@ -185,6 +198,7 @@ h2.title {
       width: 100%;
       height: 100%;
       cursor: pointer;
+
       &[type='radio'] {
         visibility: hidden;
       }
@@ -208,6 +222,7 @@ h2.title {
     justify-content: center;
   }
 }
+
 .stepControls,
 .edit_stepControls {
   margin: 2rem 0 0 !important;
@@ -218,10 +233,12 @@ h2.title {
   h3 {
     font-weight: 500;
   }
-  & > div {
+
+  &>div {
     justify-content: center;
     gap: 1rem;
   }
+
   &-item {
     display: flex;
     align-items: center;
@@ -251,6 +268,7 @@ h2.title {
       color: $accent;
       border-color: $accent;
     }
+
     input {
       position: absolute;
       opacity: 0.001;
@@ -273,6 +291,7 @@ h2.title {
   inset: 0;
   background-color: #f4f5f7;
 }
+
 .overlay-left {
   position: absolute;
   min-height: 100vh;
@@ -286,17 +305,20 @@ h2.title {
 
 .side {
   padding-bottom: 3rem;
+
   &-decision,
   &-body {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
   }
+
   &-body {
     .button.bigger {
       font-weight: 700;
       height: 5rem;
     }
+
     .field {
       & .half:not(:last-child) {
         margin: 0;
@@ -313,6 +335,7 @@ h2.title {
         pointer-events: all;
         cursor: pointer;
       }
+
       .icon:hover {
         i {
           color: $success;
@@ -334,21 +357,26 @@ h2.title {
       .title {
         display: initial;
       }
+
       .subtitle {
         margin-bottom: 1.5rem;
       }
+
       .button {
         display: block;
       }
     }
+
     &.current {
       .numstep {
         background-color: $accent;
       }
+
       .button {
         display: none;
       }
     }
+
     &.completed {
       box-shadow: none;
       border: 1px solid $success;
@@ -356,21 +384,26 @@ h2.title {
       .numstep {
         background-color: $success;
       }
+
       .button {
         display: block;
         color: $texto-light;
       }
+
       .button:hover {
         cursor: pointer;
         color: $success;
       }
+
       .button:target {
         outline: none;
       }
     }
-    &.selection ~ .side-item-courses {
+
+    &.selection~.side-item-courses {
       display: block;
     }
+
     &-courses {
       margin-top: -2rem;
       display: none;
@@ -379,12 +412,14 @@ h2.title {
         0 0 0 1px rgb(10 10 10 / 2%);
       //border: 1px solid #efefef;
       border-radius: 0 0 10px 10px;
+
       &-list {
         display: flex;
         flex-direction: column;
         max-height: 196px;
         overflow-y: auto;
       }
+
       &-selected {
         padding: 1rem 1.5rem;
         display: flex;
@@ -395,6 +430,7 @@ h2.title {
         &:not(:first-child) {
           border-top: 1px solid #d9d9d9;
         }
+
         &:first-child {
           padding-top: 1.75rem;
         }
@@ -402,18 +438,22 @@ h2.title {
         h4 {
           @include font(1rem, 500, 1.1719rem, color(medicina, '-dark'));
         }
+
         .button {
           color: $texto-light;
           padding: 0;
         }
+
         .button:hover {
           cursor: pointer;
           color: $danger;
         }
+
         .button:target {
           outline: none;
         }
       }
+
       &-total {
         padding: 1rem 1.5rem;
         display: flex;
@@ -425,6 +465,7 @@ h2.title {
         span {
           @include font(0.875rem, 500, 1.1719rem, #808fa6);
         }
+
         h3 {
           @include font(2rem, 700, 1, color(texto, '-light'));
         }
@@ -435,6 +476,7 @@ h2.title {
       display: flex;
       align-items: center;
       gap: 1rem;
+
       .numstep {
         width: 1.5rem;
         height: 1.5rem;
@@ -446,6 +488,7 @@ h2.title {
         border-radius: 2rem;
         background-color: $texto-light;
       }
+
       .title {
         display: none;
         color: #292d32;
@@ -486,26 +529,32 @@ h2.title {
       justify-content: space-between;
     }
   }
+
   .datos-tarjeta {
     .finalResume-item {
       margin-bottom: 0.75rem;
     }
   }
+
   .datos-cliente,
   .datos-tarjeta {
     row-gap: 1.25rem;
   }
+
   .finalResume-confirmation {
     gap: 1rem;
+
     .control,
     .field,
     .field label {
       width: 100%;
     }
+
     label {
       display: flex;
       align-items: center;
     }
+
     input {
       position: absolute;
       text-align: center;
@@ -517,11 +566,13 @@ h2.title {
       height: 100%;
     }
   }
+
   .finalResume-item {
     h4 {
       font-weight: 600;
       font-size: 20px;
     }
+
     label {
       color: #808fa6;
       text-transform: uppercase;
@@ -535,6 +586,7 @@ h2.title {
       }
     }
   }
+
   h2 {
     margin-bottom: -0.25rem;
   }
@@ -557,11 +609,13 @@ h2.title {
   #numeroContrato_resume {
     grid-column: span 2;
   }
+
   #emailCliente_resume {
     display: flex;
     font-size: 14px;
     text-transform: uppercase;
   }
+
   .is-divider {
     margin: 1rem 0;
   }
@@ -607,6 +661,7 @@ h2.title {
   grid-template-columns: min(100%, 800px);
   flex-flow: column nowrap;
   gap: 0.5rem;
+
   .course {
     margin-bottom: 0;
   }
@@ -624,6 +679,7 @@ h2.title {
   &-selection {
     display: flex;
     align-items: center;
+
     input {
       width: 22px;
       height: 22px;
@@ -646,6 +702,7 @@ h2.title {
       gap: 0.5rem;
     }
   }
+
   &-specialty,
   &-hours {
     text-transform: uppercase;
@@ -657,11 +714,13 @@ h2.title {
       width: 1.1em;
     }
   }
+
   &-name {
     h3 {
       @include font(1.125rem, 700, 1.2, color(medicina, '-dark'));
     }
   }
+
   &-price {
     display: flex;
     align-items: flex-end;
@@ -678,6 +737,7 @@ h2.title {
     opacity: 0.5;
     cursor: not-allowed;
     pointer-events: none;
+
     &:active,
     &:hover {
       border-color: hsl(0deg, 0%, 86%);
@@ -689,6 +749,7 @@ h2.title {
 pre {
   display: none;
 }
+
 @media screen and (min-width: 767px) {
   .pasarela {
     overflow: unset;
@@ -712,17 +773,21 @@ pre {
         width: 150px;
       }
     }
+
     .navbar-burger {
       width: 100%;
+
       span {
         width: 24px;
         left: calc(50% - 12px);
       }
+
       &:hover {
         background-color: transparent;
       }
     }
   }
+
   .pasarela {
     padding-top: calc(80px + 20px);
     padding-bottom: 0 !important;
@@ -730,6 +795,7 @@ pre {
     display: grid;
     grid-template-columns: 72px auto;
     overflow-y: scroll;
+
     .notification {
       margin: 1rem;
       padding: 1rem;
@@ -738,6 +804,7 @@ pre {
       flex-direction: column;
       row-gap: 4px;
     }
+
     .label {
       margin-bottom: 2px;
       color: #292d32;
@@ -745,6 +812,7 @@ pre {
       font-weight: 500;
       font-size: 0.75rem;
     }
+
     form {
       order: 2;
       height: 100%;
@@ -757,12 +825,14 @@ pre {
           display: block;
         }
       }
-      & > [class*='grid'] {
+
+      &>[class*='grid'] {
         overflow-y: scroll;
         grid-template-columns: 1fr;
         width: 100%;
         margin-bottom: 12px;
       }
+
       /* & > *:nth-child(2) {
         overflow-y: scroll;
         grid-template-columns: 1fr;
@@ -772,23 +842,28 @@ pre {
       .grid-med_mod_payment-mp {
         overflow: initial;
       }
+
       .grid-country-item {
         justify-content: start;
       }
+
       .field {
         margin: 0;
         width: 100%;
       }
+
       .grid-payment_method {
         &-item {
           &.tall {
             height: 60px;
           }
+
           img {
             height: 85%;
           }
         }
       }
+
       .grid-med_mod_payment-mp {
         grid-template-columns: 1fr;
         grid-template-areas:
@@ -812,6 +887,7 @@ pre {
       #mod_traditional_field {
         grid-area: mod;
       }
+
       #grid-client_data,
       #grid-payment_mp {
         display: flex;
@@ -819,6 +895,7 @@ pre {
         height: 100%;
         padding-top: 0.75rem;
       }
+
       #finalResume {
         padding: 0;
         width: 100%;
@@ -826,16 +903,19 @@ pre {
         flex-direction: column;
         border-radius: unset;
         filter: none;
+
         .finalResume-confirmation {
           display: flex;
           flex-direction: column;
           gap: 0.75rem;
           padding-block: 1rem;
+
           .field label {
             height: max-content;
             padding: 0.75rem;
           }
         }
+
         .finalResume-item {
           margin: 0;
           overflow-wrap: anywhere;
@@ -844,9 +924,11 @@ pre {
             font-size: 1rem;
           }
         }
+
         h2 {
           font-size: 1.125rem !important;
         }
+
         .datos-cliente,
         .datos-tarjeta {
           display: flex;
@@ -859,12 +941,15 @@ pre {
             gap: 12px;
           }
         }
+
         #emailCliente_resume {
           flex-direction: column;
+
           h4 {
             margin: 0;
           }
         }
+
         #numeroContrato_resume h4,
         #montoTotalContrato_resume h4 {
           font-size: 18px;
@@ -882,9 +967,10 @@ pre {
       gap: 0.75rem;
     }
 
-    & > .title {
+    &>.title {
       display: none;
     }
+
     &-item {
       padding: 0;
       min-height: 28.25px;
@@ -896,9 +982,10 @@ pre {
         padding: 0;
       }
 
-      &-info > *:not(.numstep) {
+      &-info>*:not(.numstep) {
         display: none !important;
       }
+
       button {
         height: 1.75rem;
         padding: 0 !important;
@@ -907,20 +994,23 @@ pre {
           font-size: 1.5rem !important;
         }
       }
+
       &.current,
       &.completed {
         .subtitle {
           margin-bottom: 0;
         }
+
         .title {
           margin-top: 0;
         }
       }
+
       &.completed .button {
         display: none;
       }
 
-      &.selection ~ .side-item-courses {
+      &.selection~.side-item-courses {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -929,17 +1019,20 @@ pre {
         background-color: #fff;
         box-shadow: none;
       }
+
       &-courses {
         &-list {
           padding: 0 1rem 1rem;
           max-height: unset;
         }
+
         .delete-selection {
           position: absolute;
           right: 00.25rem;
           bottom: 0.25rem;
           transform: scale(0.8);
         }
+
         &-total {
           margin: 0.5rem 1rem;
           padding: 0.75rem;
@@ -951,6 +1044,7 @@ pre {
           span {
             font-size: 8px;
           }
+
           h3 {
             font-size: 1rem;
           }
@@ -961,18 +1055,22 @@ pre {
 
   .pasarela-1 {
     padding: 0;
-    & > * {
+
+    &>* {
       padding-inline: 1rem;
     }
+
     & .title {
       margin-bottom: 12px;
       font-size: 18px;
       justify-content: space-between;
+
       span {
         display: none;
       }
     }
   }
+
   .course {
     padding: 0.5rem 0.75rem;
     justify-content: flex-start;
@@ -987,33 +1085,40 @@ pre {
     &-selection {
       display: none;
     }
+
     &-content {
       gap: 6px;
+
       &-header {
         flex-flow: row nowrap;
         gap: 0.25rem;
-        & > * {
+
+        &>* {
           font-size: 0.5rem !important;
         }
       }
     }
+
     &-specialty {
       text-overflow: ellipsis;
       overflow-y: clip;
       white-space: nowrap;
       max-width: 14ch;
     }
+
     &-name {
       h3 {
         font-size: 0.875rem;
       }
     }
+
     &-price {
       h3 {
         font-size: 1.125rem;
       }
     }
   }
+
   .searchbar-desktop {
     display: none;
   }
@@ -1029,17 +1134,21 @@ pre {
       display: block;
     }
   }
+
   .controls {
     margin-top: 0;
     grid-template-areas: 'back next';
     grid-template-columns: 1fr 1fr;
     column-gap: 8px;
+
     .next-button {
       grid-area: next;
     }
+
     button[type='submit'] {
       grid-area: next;
     }
+
     .save-button {
       width: max-content;
       padding: 0 3px;
@@ -1049,6 +1158,7 @@ pre {
       border-radius: 50%;
       aspect-ratio: 1/1;
       background-color: hsl(340deg, 100%, 57%);
+
       &[disabled] {
         opacity: 0.5;
         background-color: hsl(340deg, 100%, 57%);
@@ -1057,6 +1167,7 @@ pre {
       span {
         display: none;
       }
+
       img {
         display: block;
         transform: scale(1.1);
@@ -1069,7 +1180,7 @@ pre {
       display: none;
     }
 
-    & ~ * {
+    &~* {
       .pasarela {
         grid-template-columns: min(80vw, 272px) auto;
 
@@ -1096,12 +1207,32 @@ pre {
       }
     }
   }
-  .is-expanded ~ .pasarela {
+
+  .is-expanded~.pasarela {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
   }
+
   .modal.is-active {
     display: none;
+  }
+}
+
+
+.modal-generated-link {
+  padding: 1.5rem 2rem;
+  height: 300px;
+
+  background-color: white;
+  margin: auto 0px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  &>div.is-flex {
+    gap: 1rem;
   }
 }
