--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -630,7 +630,7 @@ h2.title {
   margin-top: 2.5rem;
   display: grid;
   grid-template-areas: 'back save next';
-  grid-auto-columns: 1fr;
+  grid-auto-columns: repeat(3, 1fr);
   gap: 1rem;
 
   .prev-button {
@@ -649,9 +649,7 @@ h2.title {
     grid-area: next;
   }
 
-  /* & button[type='submit'] {
-    grid-column: 2/3;
-  } */
+
 }
 
 // Lista de cursos
