--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -12,8 +12,8 @@
 @use './react-paginate.scss';
 
 // Fix bug grilla con input radio
-.radio+.radio,
-.button+.button {
+.radio + .radio,
+.button + .button {
   margin: 0;
 }
 
@@ -49,7 +49,7 @@ $texto-light: #808fa6;
   rotate: -90deg;
 }
 
-button.button>.ui.radio {
+button.button > .ui.radio {
   input[type='radio'] {
     visibility: hidden;
   }
@@ -88,7 +88,7 @@ header.container {
   }
 
   .navbar {
-    background: linear-gradient(180deg, #fff, 93%, transparent);
+    background: linear-gradient(180deg, #fff, 93%, rgba(255, 255, 255, 0));
     max-width: 70.66%;
     padding: 1.5rem 1.5rem 2.5rem;
     margin: -1.5rem -1.5rem -2.5rem;
@@ -106,7 +106,8 @@ header.container {
 
 .invisible {
   display: none !important;
-  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1)
+    both;
   animation: scale-in-center 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) both;
   animation-play-state: paused;
 }
@@ -140,7 +141,7 @@ h2.title {
     min-height: 376px;
     height: max-content;
 
-    &>[class*='grid'] {
+    & > [class*='grid'] {
       flex-grow: 1;
       align-content: flex-start;
     }
@@ -234,7 +235,7 @@ h2.title {
     font-weight: 500;
   }
 
-  &>div {
+  & > div {
     justify-content: center;
     gap: 1rem;
   }
@@ -400,7 +401,7 @@ h2.title {
       }
     }
 
-    &.selection~.side-item-courses {
+    &.selection ~ .side-item-courses {
       display: block;
     }
 
@@ -648,8 +649,6 @@ h2.title {
   .next-button {
     grid-area: next;
   }
-
-
 }
 
 // Lista de cursos
@@ -787,20 +786,20 @@ pre {
   }
 
   .pasarela {
-    padding-top: calc(80px + 20px);
+    padding-top: calc(5rem + 1.25rem);
     padding-bottom: 0 !important;
     height: 100vh;
     display: grid;
-    grid-template-columns: 72px auto;
-    overflow-y: scroll;
+    grid-template-columns: 4.5rem auto;
+    overflow-y: auto;
 
     .notification {
       margin: 1rem;
       padding: 1rem;
-      font-size: 14px;
+      font-size: 0.875rem;
       display: flex;
       flex-direction: column;
-      row-gap: 4px;
+      row-gap: 0.25rem;
     }
 
     .label {
@@ -816,7 +815,7 @@ pre {
       height: 100%;
       grid-template-columns: 1fr;
       grid-template-rows: max-content auto max-content;
-      padding: 0 0 24px;
+      padding: 0 1rem 1.5rem;
 
       & .title {
         svg {
@@ -824,7 +823,7 @@ pre {
         }
       }
 
-      &>[class*='grid'] {
+      & > [class*='grid'] {
         overflow-y: scroll;
         grid-template-columns: 1fr;
         width: 100%;
@@ -965,7 +964,7 @@ pre {
       gap: 0.75rem;
     }
 
-    &>.title {
+    & > .title {
       display: none;
     }
 
@@ -980,7 +979,7 @@ pre {
         padding: 0;
       }
 
-      &-info>*:not(.numstep) {
+      &-info > *:not(.numstep) {
         display: none !important;
       }
 
@@ -1008,7 +1007,7 @@ pre {
         display: none;
       }
 
-      &.selection~.side-item-courses {
+      &.selection ~ .side-item-courses {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -1051,10 +1050,10 @@ pre {
     }
   }
 
-  .pasarela-1 {
+  .pasarela-1.seleccion-de-cursos {
     padding: 0;
 
-    &>* {
+    & > * {
       padding-inline: 1rem;
     }
 
@@ -1091,7 +1090,7 @@ pre {
         flex-flow: row nowrap;
         gap: 0.25rem;
 
-        &>* {
+        & > * {
           font-size: 0.5rem !important;
         }
       }
@@ -1178,7 +1177,7 @@ pre {
       display: none;
     }
 
-    &~* {
+    & ~ * {
       .pasarela {
         grid-template-columns: min(80vw, 272px) auto;
 
@@ -1206,7 +1205,7 @@ pre {
     }
   }
 
-  .is-expanded~.pasarela {
+  .is-expanded ~ .pasarela {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -1217,14 +1216,13 @@ pre {
   }
 }
 
-
 .modal-generated-link {
   padding: 1.5rem 2rem;
   height: 300px;
   background-color: #e6f7ef;
   color: #257953;
   margin: auto 0px;
-  border-radius: 20px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1234,7 +1232,7 @@ pre {
     color: #257953;
   }
 
-  &>div.is-flex {
+  & > div.is-flex {
     gap: 1rem;
   }
 }
