revision-textos-y-estilos-mobile
Chequee algunos textos y corregí la disposición de algunas grid. Tenían elementos que poseían asignado un grid-area y eso rompía la grilla

--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -1,5 +1,5 @@
-@use '../../node_modules/bulma/bulma.sass';
-@use 'abstracts';
+@use './bulma';
+@use 'abstracts' as *;
 @use 'cardAsesor';
 @use 'pasarela-country.scss';
 @use 'pasarela-client-form.scss';
@@ -590,11 +590,12 @@ h2.title {
 
         & > *,
         & > [id*=''] {
-          grid-area: unset;
+          grid-area: unset !important;
         }
       }
       & > .is-divider {
         display: initial;
+        margin-block: 0.25rem;
       }
       .grid {
         &-country-item {
