--- a/src/scss/pasarela-country.scss
+++ b/src/scss/pasarela-country.scss
@@ -9,7 +9,7 @@
 
   &-item {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border-radius: 6px;
 
