--- a/src/scss/pasarela-generate_payment.scss
+++ b/src/scss/pasarela-generate_payment.scss
@@ -3,7 +3,6 @@
   grid-template-areas: 'fullName fullName phone' 'address address dni' 'email email email' 'card card card' 'notify notify notify';
   gap: 1rem;
   align-items: center;
-  justify-content: center;
   width: 100%;
 
   .field:nth-child(1) {
@@ -48,6 +47,22 @@
     button {
       width: 100%;
     }
+    .ElementsApp {
+      font-size: 1rem;
+    }
+
+    .cardInputsMobile {
+      display: grid;
+      grid-template-columns: 52px 1fr 1fr;
+      row-gap: 1rem;
+      column-gap: 0.25rem;
+      > .field {
+        grid-area: unset;
+      }
+      .field:first-child {
+        grid-column: span 3;
+      }
+    }
   }
 
   pre {
@@ -58,6 +73,12 @@
 @media screen and (max-width: 766px) {
   #grid-payment_stripe {
     grid-template-areas: unset;
+  }
+  .checkout_stripe {
+    label[for='card_element'],
+    #card_element {
+      display: none;
+    }
   }
 }
 #grid-payment_mp {
